# calf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  deny.yml  pullrequest.yml
examples/: cow.rs
src/: calf.rs  error.rs  lib.rs  reader.rs
src/bootsector/: boot.rs  mbr.rs  mod.rs
src/format/: cluster.rs  header.rs  level.rs  mod.rs
src/format/extensions/: extension.rs  features.rs  mod.rs
src/utils/: mod.rs  read.rs  strings.rs
tests/: qcow_tests.rs
tests/test_data/headers/: header_version3.raw
tests/test_data/levels/: level1_version3.raw  level2_version3.raw
tests/test_data/mbr/: extended_partition.raw
tests/test_data/qcow/: README.md
